added dropdown menu here

--- a/index.html
+++ b/index.html
@@ -12,12 +12,28 @@
         <!-- navigation -->
         <nav id="navigation">
             <div class="logo">
-                <h2>Programming Sikhbo</h2>
+                <h2>It Corner</h2>
             </div>
              
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sevices</a></li>
+                <li><a href="#">Home</a>
+                    <ul class="dropdownMenu">
+                        <li><a href="#">Home-1</a></li>
+                        <li><a href="#">Home-2</a></li>
+                        <li><a href="#">Home-3</a></li>
+                        <li><a href="#">Home-4</a></li>
+                        <li><a href="#">Home-5</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Sevices</a>
+                    <ul class="dropdownMenu">
+                        <li><a href="#">Home-1</a></li>
+                        <li><a href="#">Home-2</a></li>
+                        <li><a href="#">Home-3</a></li>
+                        <li><a href="#">Home-4</a></li>
+                        <li><a href="#">Home-5</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">products</a></li>
                 <li><a href="#">About us</a></li> 
                 <li><a href="#">contact us</a></li>
