updated dropdown menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- navigation -->
         <nav id="navigation">
             <div class="logo">
-                <h2>It Corner</h2>
+                <h2>It <span class="log-first-letter">C</span>orner</h2>
             </div>
              
             <ul>
