Added main/hero section

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project-4</title>
+    <!-- font-awesome -->
+    <script src="https://kit.fontawesome.com/538fce7ab7.js" crossorigin="anonymous"></script>
+    <!-- css link -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
    <header>
-        <!-- navigation -->
+        <!-- navigation code start here-->
         <nav id="navigation">
             <div class="logo">
                 <h2>It <span class="log-first-letter">C</span>orner</h2>
@@ -39,9 +42,19 @@
                 <li><a href="#">contact us</a></li>
             </ul>
         </nav>
-        <!-- <div class="hero-area">
-
-        </div> -->
+        <!-- Hero area start here -->
+        <section id="main-header">
+            <div class="header-container">
+                <h4>You can learn with us</h4>
+                <h1>Welcome to It Corner</h1>
+                <h5>with a lot of laguage</h5>
+                <div class="social-icon">
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                </div>
+                <button>purchase our courses</button>
+            </div>
+        </section>
    </header>
 </body>
 </html>
