--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- navigation code start here-->
         <nav id="navigation">
             <div class="logo">
-                <h2>It <span class="log-first-letter">C</span>orner</h2>
+                <h1>It <span class="log-first-letter">C</span>orner</h1>
             </div>
              
             <ul>
@@ -56,5 +56,48 @@
             </div>
         </section>
    </header>
+
+   <main>
+     <section id="first-section">
+        <div id="first-container">
+            <div class="card-design">
+                <i class="fas fa-laptop"></i>
+                <h2>Learn programming</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla temporibus ducimus velit quaerat cumque sequi officiis sunt tenetur magni nesciunt!</p>
+            </div>
+
+            <div class="card-design">
+                <i class="fas fa-heart"></i>
+                <h2>Web developer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At eveniet impedit soluta officia hic voluptas saepe blanditiis ea repellendus error!</p>
+            </div>
+
+            <div class="card-design">
+                <i class="fas fa-chalkboard-teacher"></i>
+                <h2>Learn freelancing</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit nulla ea, consequatur numquam amet maiores repudiandae consequuntur obcaecati at blanditiis.</p>
+            </div>
+        </div>
+     </section> 
+
+     <!-- second section start here -->
+    <section>
+        <div class="smart-area-title">
+            <h2>Smart Area</h2>
+        </div>
+
+        <div class="smart-area">
+            <div>
+                <img src="./img/smart women.jpg" alt="smart women">
+            </div>
+            <div class="smart-area-text">
+                <h4>TRY SOMTHING NEW FOR YOU</h4>
+                <h2>Create Your Own business</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ab nesciunt delectus dolorem, ea quas natus blanditiis earum dolores nemo mollitia soluta assumenda? Ut praesentium sequi excepturi laboriosam! Aliquam repudiandae cupiditate recusandae animi? Eius eveniet esse nostrum. Doloribus cum ullam modi eveniet? Odio sunt ipsa esse laboriosam praesentium quod dolores cupiditate. Deleniti nulla id aliquam molestias quisquam veniam architecto, ipsum quis. Officiis corrupti sint doloremque vel accusamus cum vitae nulla impedit dignissimos aliquam voluptatum eveniet modi nisi quidem quas totam iure suscipit, aspernatur accusantium tenetur dolore, odio repellendus! Fugit eveniet dolorum minus hic illo, aliquam distinctio aut dolore magni cum?</p>
+                <a href="#">Checkout</a>
+            </div>
+        </div>
+    </section>
+   </main>
 </body>
 </html>
