--- a/index.html
+++ b/index.html
@@ -98,6 +98,49 @@
             </div>
         </div>
     </section>
+
+    <!-- third section -->
+    <section id="third-section">
+        <div class="services-area">
+            <div class="services-area-title">
+                <h4>We provide only quality</h4>
+                <h2>Our Primary Service</h2>
+             </div>
+
+             <div class="each-services-parent">
+                <div class="each-services">
+                    <i class="fas fa-tools"></i>
+                    <h3>Visual Composer</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt praesentium ut, eligendi voluptates dolorem reprehenderit modi blanditiis officiis dolorum, voluptatibus eius laborum tempora hic itaque rem quidem quos alias? Eius!</p>
+                </div>
+                <div class="each-services">
+                    <i class="fas fa-tree"></i>
+                    <h3>Fully Responsive</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt praesentium ut, eligendi voluptates dolorem reprehenderit modi blanditiis officiis dolorum, voluptatibus eius laborum tempora hic itaque rem quidem quos alias? Eius!</p>
+                </div>
+                <div class="each-services">
+                    <i class="fas fa-shopping-basket"></i>
+                    <h3>E-commerce</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt praesentium ut, eligendi voluptates dolorem reprehenderit modi blanditiis officiis dolorum, voluptatibus eius laborum tempora hic itaque rem quidem quos alias? Eius!</p>
+                </div>
+                <div class="each-services">
+                    <i class="fas fa-lightbulb"></i>
+                    <h3>Clean and optimized</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt praesentium ut, eligendi voluptates dolorem reprehenderit modi blanditiis officiis dolorum, voluptatibus eius laborum tempora hic itaque rem quidem quos alias? Eius!</p>
+                </div>
+                <div class="each-services">
+                    <i class="fas fa-paper-plane"></i>
+                    <h3>High speed load</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt praesentium ut, eligendi voluptates dolorem reprehenderit modi blanditiis officiis dolorum, voluptatibus eius laborum tempora hic itaque rem quidem quos alias? Eius!</p>
+                </div>
+                <div class="each-services">
+                    <i class="fas fa-life-ring"></i>
+                    <h3>Engine SEO Ready</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt praesentium ut, eligendi voluptates dolorem reprehenderit modi blanditiis officiis dolorum, voluptatibus eius laborum tempora hic itaque rem quidem quos alias? Eius!</p>
+                </div>
+             </div>
+        </div>
+    </section>
    </main>
 </body>
 </html>
