Fourth section pricing table added

--- a/index.html
+++ b/index.html
@@ -141,6 +141,64 @@
              </div>
         </div>
     </section>
+
+    <!-- fourth section -->
+    <section id="pricing-section">
+        <div id="pricing-container">
+            <div class="pricing-title">
+                <h2>Course prising</h2>
+            </div>
+
+            <div class="pricing-parent">
+                <div class="single-card">
+                    <div class="signle-card-img">
+                        <img src="./img/JS.webp" alt="">
+                    </div>
+                    <h3>javascript</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quisquam iusto cumque, tempore quasi eligendi veniam corporis nulla. Natus recusandae inventore quidem doloremque non laudantium delectus earum suscipit perferendis blanditiis?</p>
+
+                    <div class="month-pricing"> 
+                        <span  class="pricing-span-1">$29</span>
+                        <span  class="pricing-span-2">per month</span>
+                    </div>
+                    <button>Get started</button>
+                    <a href="#">Course Outline</a>
+                </div>
+
+                <div class="single-card">
+                    <div class="signle-card-img">
+                        <img src="./img/C++.jpg" alt="">
+                    </div>
+                    <h3>javascript</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quisquam iusto cumque, tempore quasi eligendi veniam corporis nulla. Natus recusandae inventore quidem doloremque non laudantium delectus earum suscipit perferendis blanditiis?</p>
+
+                    <div class="month-pricing"> 
+                        <span  class="pricing-span-1">$29</span>
+                        <span  class="pricing-span-2">per month</span>
+                    </div>
+
+                    <button>Get started</button>
+                    <a href="#">Course Outline</a>
+                </div>
+
+                <div class="single-card">
+                    <div class="signle-card-img">
+                        <img src="./img/python.jpg" alt="">
+                    </div>
+                    <h3>javascript</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quisquam iusto cumque, tempore quasi eligendi veniam corporis nulla. Natus recusandae inventore quidem doloremque non laudantium delectus earum suscipit perferendis blanditiis?</p>
+
+                    <div class="month-pricing"> 
+                        <span class="pricing-span-1">$29</span>
+                        <span  class="pricing-span-2">per month</span>
+                    </div>
+
+                    <button>Get started</button>
+                    <a href="#">Course Outline</a>
+                </div>
+            </div>
+        </div>
+    </section>
    </main>
 </body>
 </html>
