added 3 more section

--- a/index.html
+++ b/index.html
@@ -199,6 +199,207 @@
             </div>
         </div>
     </section>
+
+    <!-- Testominial ection -->
+    <section id="testo-section">
+        <div class="testo-container">
+            <div class="testo-title">
+                <h2>Testomonial</h2>
+                <h3>Happy Customer</h3>
+            </div>
+
+            <div class="testo-parent">
+                <div class="testo-single-card">
+                    <div class="testo-img">
+                        <img src="./img/testomonial-1.jpg" alt="">
+                    </div>
+                    <div>
+                        <span class="testo-span">John Doe</span>
+                        <span>- Google Inc</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maxime ipsum explicabo qui aperiam sint, aliquam laborum cum voluptas nobis!</p>
+
+                        <div class="testo-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="testo-single-card">
+                    <div class="testo-img">
+                        <img src="./img/testomonial-2.jpg" alt="">
+                    </div>
+                    <div>
+                        <span class="testo-span">Mia Malcovana</span>
+                        <span>- Apple Inc</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maxime ipsum explicabo qui aperiam sint, aliquam laborum cum voluptas nobis!</p>
+
+                        <div class="testo-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="testo-single-card">
+                    <div class="testo-img">
+                        <img src="./img/testomonial-3.jpg" alt="">
+                    </div>
+                    <div>
+                        <span class="testo-span">Michel Artez</span>
+                        <span>- Yahoo Inc</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maxime ipsum explicabo qui aperiam sint, aliquam laborum cum voluptas nobis!</p>
+
+                        <div class="testo-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="testo-single-card">
+                    <div class="testo-img">
+                        <img src="./img/testomonial-4.jpg" alt="">
+                    </div>
+                    <div>
+                        <span class="testo-span">John Romer</span>
+                        <span>- twitter Inc</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum maxime ipsum explicabo qui aperiam sint, aliquam laborum cum voluptas nobis!</p>
+
+                        <div class="testo-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="parallal-section">
+        <div class="parallax-parent">
+            <div class="parallax-single-item">
+                <i class="fas fa-smile"></i>
+                <h2>970</h2>
+                <h4>Happy clients</h4>
+            </div>
+            <div class="parallax-single-item">
+                <i class="fas fa-pencil-alt"></i>
+                <h2>510</h2>
+                <h4>Projects completed</h4> 
+            </div>
+            <div class="parallax-single-item">
+                <i class="fas fa-trophy"></i>
+                <h2>700</h2>
+                <h4>Awards win</h4>
+            </div>
+            <div class="parallax-single-item">
+                <i class="fas fa-envelope"></i>
+                <h2>8509</h2>
+                <h4>letters sent</h4>    
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="blog-container">
+             <div class="testo-title">
+                <h2>From Blog</h2>
+                <h3>Awesome Blog</h3>
+             </div>
+
+             <div class="single-blog-item-parent">
+                <div class="signle-item-blog">
+                    <div class="blog-img-icon-div">
+                        <img class="blog-image" src="./img/blog1.jpg" alt="">
+                        <div class="blog-icon">
+                            <i class="fas fa-pen-nib"></i>
+                            <h5>Gift Sesion -Blog</h5>
+                        </div>
+                    </div>
+                    <div class="blog-single-text">
+                        <h3>Gift Sesion -Blog</h3>
+                        <p>24 june, 2022 by It Corner</p>
+                    </div>
+                 </div>
+                <div class="signle-item-blog">
+                    <div class="blog-img-icon-div">
+                        <img class="blog-image" src="./img/blog2.jpg" alt="">
+                        <div class="blog-icon">
+                            <i class="fas fa-pen-nib"></i>
+                            <h5>wood Sesion -Blog</h5>
+                        </div>
+                    </div>
+                    <div class="blog-single-text">
+                        <h3>wood Sesion -Blog</h3>
+                        <p>24 june, 2022 by It Corner</p>
+                    </div>
+                 </div>
+                <div class="signle-item-blog">
+                    <div class="blog-img-icon-div">
+                        <img class="blog-image" src="./img/blog3.jpg" alt="">
+                        <div class="blog-icon">
+                            <i class="fas fa-pen-nib"></i>
+                            <h5>Cycle Sesion -Blog</h5>
+                        </div>
+                    </div>
+                    <div class="blog-single-text">
+                        <h3>Cycle Sesion -Blog</h3>
+                        <p>24 june, 2022 by It Corner</p>
+                    </div>
+                 </div>
+                <div class="signle-item-blog">
+                    <div class="blog-img-icon-div">
+                        <img class="blog-image" src="./img/blog1.jpg" alt="">
+                        <div class="blog-icon">
+                            <i class="fas fa-pen-nib"></i>
+                            <h5>Gift Sesion -Blog</h5>
+                        </div>
+                    </div>
+                    <div class="blog-single-text">
+                        <h3>Gift Sesion -Blog</h3>
+                        <p>24 june, 2022 by It Corner</p>
+                    </div>
+                 </div>
+                <div class="signle-item-blog">
+                    <div class="blog-img-icon-div">
+                        <img  class="blog-image" src="./img/blog1.jpg" alt="">
+                        <div class="blog-icon">
+                            <i class="fas fa-pen-nib"></i>
+                            <h5>Gift Sesion -Blog</h5>
+                        </div>
+                    </div>
+                    <div class="blog-single-text">
+                        <h3>Gift Sesion -Blog</h3>
+                        <p>24 june, 2022 by It Corner</p>
+                    </div>
+                 </div>
+                <div class="signle-item-blog">
+                    <div class="blog-img-icon-div">
+                        <img  class="blog-image" src="./img/blog1.jpg" alt="">
+                        <div class="blog-icon">
+                            <i class="fas fa-pen-nib"></i>
+                            <h5>Gift Sesion -Blog</h5>
+                        </div>
+                    </div>
+                    <div class="blog-single-text">
+                        <h3>Gift Sesion -Blog</h3>
+                        <p>24 june, 2022 by It Corner</p>
+                    </div>
+                 </div>
+             </div>
+        </div>
+    </section>
    </main>
 </body>
 </html>
