--- a/index.html
+++ b/index.html
@@ -82,19 +82,21 @@
 
      <!-- second section start here -->
     <section>
-        <div class="smart-area-title">
-            <h2>Smart Area</h2>
-        </div>
-
-        <div class="smart-area">
-            <div>
-                <img src="./img/smart women.jpg" alt="smart women">
+        <div class="smart-area-container">
+            <div class="smart-area-title">
+                <h2>Smart Area</h2>
             </div>
-            <div class="smart-area-text">
-                <h4>TRY SOMTHING NEW FOR YOU</h4>
-                <h2>Create Your Own business</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ab nesciunt delectus dolorem, ea quas natus blanditiis earum dolores nemo mollitia soluta assumenda? Ut praesentium sequi excepturi laboriosam! Aliquam repudiandae cupiditate recusandae animi? Eius eveniet esse nostrum. Doloribus cum ullam modi eveniet? Odio sunt ipsa esse laboriosam praesentium quod dolores cupiditate. Deleniti nulla id aliquam molestias quisquam veniam architecto, ipsum quis. Officiis corrupti sint doloremque vel accusamus cum vitae nulla impedit dignissimos aliquam voluptatum eveniet modi nisi quidem quas totam iure suscipit, aspernatur accusantium tenetur dolore, odio repellendus! Fugit eveniet dolorum minus hic illo, aliquam distinctio aut dolore magni cum?</p>
-                <a href="#">Checkout</a>
+    
+            <div class="smart-area">
+                <div>
+                    <img src="./img/smart women.jpg" alt="smart women">
+                </div>
+                <div class="smart-area-text">
+                    <h4>TRY SOMTHING NEW FOR YOU</h4>
+                    <h2>Create Your Own business</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ab nesciunt delectus dolorem, ea quas natus blanditiis earum dolores nemo mollitia soluta assumenda? Ut praesentium sequi excepturi laboriosam! Aliquam repudiandae cupiditate recusandae animi? Eius eveniet esse nostrum. Doloribus cum ullam modi eveniet? Odio sunt ipsa esse laboriosam praesentium quod dolores cupiditate. Deleniti nulla id aliquam molestias quisquam veniam architecto, ipsum quis. Officiis corrupti sint doloremque vel accusamus cum vitae nulla impedit dignissimos aliquam voluptatum eveniet modi nisi quidem quas totam iure suscipit, aspernatur accusantium tenetur dolore, odio repellendus! Fugit eveniet dolorum minus hic illo, aliquam distinctio aut dolore magni cum?</p>
+                    <a href="#">Checkout</a>
+                </div>
             </div>
         </div>
     </section>
@@ -400,6 +402,117 @@
              </div>
         </div>
     </section>
+
+    <!-- Contact section -->
+    <section>
+        <div class="contact-section-container">
+            <div class="testo-title">
+                <h2>Contacts us</h2>
+                <h4>Contact Form</h4>
+            </div>
+
+            <div>
+                <div class="form-parent">
+                    <form class="form-tag">
+                        <div class="fullname-email-parent">
+                            <div>
+                                <h4>Full Name</h4>
+                                <input type="text" name="fullname" id="fullname" placeholder="Full Name">
+                            </div>
+                            <div>
+                                <h4>Email Address</h4>
+                                <input type="email" name="fullname" id="fullname" placeholder="Email">
+                            </div>
+                        </div>
+                        <h4 class="subject-input-text">Subject</h4>
+                        <input class="subject-input" type="text" name="Subject" id="subject" placeholder="subject">
+
+                        <h4 class="subject-input-text">Message</h4>
+                        <textarea class="form-text-area" name="" id="" placeholder="message"></textarea>
+
+                        <input class="form-button" type="submit" value="send message">
+                    </form>
+                    <div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.3280951563606!2d90.36650911536339!3d23.80692939253032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c0d6f6b8c2ff%3A0x3b138861ee9c8c30!2sMirpur%2010%20Roundabout%2C%20Dhaka%201216!5e0!3m2!1sen!2sbd!4v1656077390297!5m2!1sen!2sbd" width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+                <div class="form-address-parent">
+                    <div class="form-single-address">
+                        <i class="fas fa-search-location"></i>
+                        <p><span>Address:</span>Dhaka, Mirpur-10</p>
+                    </div>
+                    <div class="form-single-address">
+                        <i class="fas fa-phone"></i>
+                        <p><span>Phone:</span>01701049026</p>
+                    </div>
+                    <div class="form-single-address">
+                        <i class="fas fa-paper-plane"></i>
+                        <p><span>Email:</span> mumit9027@gmail.com</p>
+                    </div>
+                    <div class="form-single-address">
+                        <i class="fas fa-globe"></i>
+                        <p><span>Website:</span> mumit9027@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
    </main>
+
+   <footer>
+        <div class="footer-container">
+           <div class="footer-single-item-parent">
+                    <div class="footer-single-item">
+                        <h3>Find us</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis rerum a, molestiae quisquam iusto sunt! Quidem doloribus deserunt eos rem itaque! Laudantium necessitatibus voluptatibus accusamus voluptatem, maiores enim sint natus.</p>
+                        <p><i class="fas fa-paper-plane"></i> section 9, Road 34</p>
+                        <p><i class="fas fa-phone"></i>section 9, Road 34</p>
+                        <p><i class="fas fa-envelope"></i>info@example.com</p>
+                    </div>
+                    <div  class="footer-single-item">
+                        <h3>Quick links</h3>
+                        <ul>
+                            <li><a href="#">Html</a></li>
+                            <li><a href="#">Bootstrap</a></li>
+                            <li><a href="#">Javascript</a></li>
+                            <li><a href="#">ES6</a></li>
+                            <li><a href="#">Reat.js</a></li>
+                        </ul>                          
+                    </div>
+                    <div  class="footer-single-item">
+                        <h3>Quick links</h3>
+                        <ul>
+                            <li><a href="#">Node js</a></li>
+                            <li><a href="#">Express js</a></li>
+                            <li><a href="#">Javascript</a></li>
+                            <li><a href="#">MongoDB</a></li>
+                            <li><a href="#">Git Hub</a></li>
+                            <li><a href="#">React Native</a></li>
+                        </ul>              
+                    </div>
+                    <div  class="footer-single-item">
+                    <h3>Follow us</h3>
+                    <ul>
+                        <li><a href="#"><i class="fab fa-facebook"></i></a> </li>
+                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fas fa-pager"></i></a></li>
+                    </ul>   
+                </div>
+           </div>
+
+           <hr>
+
+           <div class="footer-menu-item">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">contatct Us</a></li>
+                </ul>
+                <p>Copyright &copy; <span>2022 it corner</span></p>
+           </div>
+        </div>
+   </footer>
 </body>
 </html>
